--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,6 @@ erl_crash.dump
 *.ez
 
 # Ignore package tarball (built via "mix hex.build").
-distributed_case-*.tar
+ex_unit_clustered_case-*.tar
 
+.tool_versions
