--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,11 @@ elixir:
   - 1.7
 otp_release:
   - 21.0
+before_script:
+  - epmd -daemon
+  - MIX_ENV=test mix deps.get
 script:
-  - "BOOT_TIMEOUT=30000 MIX_ENV=test mix do deps.get, test"
+  - "BOOT_TIMEOUT=30000 MIX_ENV=test mix test"
 notifications:
   recipients:
     - paulschoenfelder@gmail.com
